Fix styles on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -21,3 +21,8 @@ body {
   max-width: 500px;
   margin: auto;
 }
+
+.prayers {
+  margin-top: 10px;
+  padding: 5px;
+}
