--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #dadada;
   height: 50px;
+  padding: 5px;
 
   .locations-wrapper {
     display: flex;
